[package]
name = "rcombinators"
version = "0.1.0"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "A parser combinator library in rust."
readme = "README.md"
keywords = ["parsing", "parser-combinators", "parsec", "parse"]
license = "MIT"
repository = "https://github.com/dermesser/rcombinators"
edition = "2018"

[dependencies]
time-test = "0.2"
utf8reader = "0.1"
